--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base-template.html" %}
 
 {% block body_content %}
-  <div id="root"></div>
+  <div id="board-container"></div>
+{#  <div id="root"></div>#}
 {#  <form action="{{ url_for("add_board") }}" method="post">#}
 {#    <label for="cacat"></label>#}
 {#    <input type="text" id="cacat" name="name">#}
