--- a/templates/base-template.html
+++ b/templates/base-template.html
@@ -6,48 +6,32 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>ProMan</title>
 
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css" integrity="sha384-rdyFrfAIC05c5ph7BKz3l5NG5yEottvO/DQ0dCrwD8gzeQDjYBHNr1ucUpQuljos" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css" integrity="sha384-u5J7JghGz0qUrmEsWzBQkfvc8nK3fUT7DCaQzNQ+q4oEXhGSx+P2OqjWsfIRB8QT" crossorigin="anonymous">
+
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon/favicon.ico') }}">
         <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
         <link rel="icon" type="image/png" sizes="96x96" href="{{ url_for('static', filename='favicon/favicon-96x96.png') }}">
         <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
+
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/dragula.css') }}">
         <script type="module" src="{{ url_for('static', filename='js/main.js') }}" defer></script>
+        <script type="module" src="{{ url_for('static', filename='js/dragula.js') }}" defer></script>
     </head>
     <body id="body">
-      <!-- As a heading -->
       <nav class="navbar navbar-light bg-info">
         <div class="container-fluid">
           <span class="navbar-brand mb-0 h1">ProMan</span>
+          <a href="#" data-bs-toggle="modal" data-bs-target="#form-registration"> Register </a>
+          <a href="#" data-bs-toggle="modal" data-bs-target="#form-login"> Log in </a>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#boardModal" data-bs-whatever="@mdo">Create new board</button>
-{#          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Edit board</button>#}
         </div>
       </nav>
       {% block body_content %}{% endblock %}
-{#      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">#}
-{#        <div class="modal-dialog">#}
-{#          <div class="modal-content">#}
-{#            <div class="modal-header">#}
-{#              <h5 class="modal-title" id="exampleModalLabel">Board title:</h5>#}
-{#              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>#}
-{#            </div>#}
-{#            <form id="form-board-title">#}
-{#                <div class="modal-body">#}
-{#                    <div class="mb-3">#}
-{#                      <label for="boardTitle" class="col-form-label">Board name:</label>#}
-{#                      <input type="text" class="form-control" id="boardTitle" name="boardTitle">#}
-{#                    </div>#}
-{#                </div>#}
-{#                <div class="modal-footer">#}
-{#                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>#}
-{#                  <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save</button>#}
-{#                </div>#}
-{#            </form>#}
-{#          </div>#}
-{#        </div>#}
-{#      </div>#}
     </body>
 </html>
